# eremont

./: .env_example  .gitignore  Dockerfile  TODO.md  docker-compose.yml  manage.py  pyproject.toml  startup_commands.py
eremont/: asgi.py  config.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
repairshop/: apps.py  context_processor.py  forms.py  urls.py
repairshop/admin/: __init__.py  about.py  admin.py  contact_information.py  contacts.py  content.py  customer.py  discount_global.py  discount_personal.py  home_content.py  order.py  order_item.py  order_status.py  order_status_history.py  products.py  service.py  sub_category.py  vehicle.py
repairshop/migrations/: 0001_initial.py
repairshop/models/: __init__.py  about.py  additional_expenses.py  contact_information.py  contacts.py  content.py  customer.py  discount_global.py  discount_personal.py  home_content.py  invoice.py  order.py  order_item.py  order_status.py  order_status_history.py  product.py  products.py  service.py  sub_category.py  vehicle.py
repairshop/static/repairshop/css/: style.css
repairshop/templates/repairshop/: 404.html  500.html  about.html  base.html  categories.html  contacts.html  home.html  product.html  sub_category.html
repairshop/templatetags/: custom_tags.py
repairshop/views/: __init__.py  about.py  categories.py  contacts.py  home.py  page_not_found_404.py  product.py  server_error_500.py  sub_category.py
